[package]
name = "yamakan"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A collection of Black-Box Optimization algorithms"
homepage = "https://github.com/sile/yamakan"
repository = "https://github.com/sile/yamakan"
readme = "README.md"
keywords = ["blackbox-optimizer"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[badges]
travis-ci = {repository = "sile/yamakan"}
codecov = {repository = "sile/yamakan"}

[dependencies]
ordered-float = "1"
rand = "0.7"
serde = { version = "1", features = ["derive"], optional = true }
trackable = "0.2"
