[package]
name = "yamakan"
version = "0.2.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A collection of Black-Box Optimization algorithms"
homepage = "https://github.com/sile/yamakan"
repository = "https://github.com/sile/yamakan"
readme = "README.md"
keywords = ["blackbox-optimizer"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[badges]
travis-ci = {repository = "sile/yamakan"}
codecov = {repository = "sile/yamakan"}

[dependencies]
ordered-float = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"], optional = true }
trackable = "0.2"
